# PartyGFX

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  color.cpp  color.h  element_base.h  elements.cpp  elements.h  party_gfx.cpp  party_gfx.h  point.cpp  point.h  rect.cpp  rect.h  screen_span.cpp  screen_span.h
src/elements/: pixel.cpp  pixel.h
tests/: CMakeLists.txt  tests.cpp
